# My-Naughty-Project-Cpp

./: .gitignore
basic/: CMakeLists.txt
basic/app/: CMakeLists.txt  main.cpp
basic/components/: CMakeLists.txt
basic/components/include/components/: Gripper.hpp  Kinematics.hpp  RobotComponents.hpp  RobotJoint.hpp  TwoLinkArm.hpp
basic/components/src/: Gripper.cpp  Kinematics.cpp  RobotComponents.cpp  RobotJoint.cpp  TwoLinkArm.cpp
ex-oop-employee/: CMakeLists.txt
ex-oop-employee/myLib/: CMakeLists.txt
ex-oop-employee/myLib/libHeader/: employee.hpp  employeeFunc.hpp
ex-oop-employee/myLib/src/: employee.cpp  employeeFunc.cpp
ex-oop-employee/src/: CMakeLists.txt  main.cpp
